--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.alexanderdoroshko.intellijlsppluginexample
+pluginGroup = com.lsp_plugin_example
 pluginName = intellij-lsp-plugin-example
 pluginRepositoryUrl = https://github.com/alexander-doroshko/intellij-lsp-plugin-example
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 233
-pluginUntilBuild = 242.*
+pluginSinceBuild = 243
+pluginUntilBuild = 251.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IC
-platformVersion = 2023.3.8
+platformType = IU
+platformVersion = 2024.3
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
